# 3Dto2D

./: .editorconfig  .flake8  .gitattributes  .gitignore  END_USER_QUICK_START.txt  LICENSE  OPEN_THIS_FIRST.txt  README.md  README_FINAL_v12.txt  README_FIRST_EASY_MODE.md  README_MODEL_TIERS_v11.txt  README_START_HERE.txt  README_VISUAL_EDITION.md  RUN_DEMO_NO_GPU.bat  Run_Tests.bat  START_FIRST_RUN_WIZARD.bat  START_HERE.bat  THIRD_PARTY_NOTICES.md  WHAT_EACH_FILE_DOES.txt  pyproject.toml  pytest.ini  requirements-lock.txt  run_demo_no_gpu.sh  start.command  start_first_run_wizard.sh
app/: END_USER_README.md  README.md  START_SPRITEFORGE.bat  VERSION.txt  blender_render_ortho.py  comfyui_wan_sprite_notes.md  requirements.txt  spriteforge.py  spriteforge_atlas.py  spriteforge_batch.py  spriteforge_character.py  spriteforge_cli.py  spriteforge_cloud.py  spriteforge_commands.py  spriteforge_compare.py  spriteforge_demo.py  spriteforge_easy.py  spriteforge_engine_export.py  spriteforge_final.py  spriteforge_first_run.py  spriteforge_hardware.py  spriteforge_launcher.py  spriteforge_maintenance.py  spriteforge_pack.py  spriteforge_pack_formats.py  spriteforge_production.py  spriteforge_project.py  spriteforge_prompts.py  spriteforge_qc.py  spriteforge_quality.py  spriteforge_queue.py  spriteforge_remote.py  spriteforge_repro.py  spriteforge_studio.py  spriteforge_support_bundle.py  spriteforge_unified.py  spriteforge_unified_parser.py  spriteforge_utils.py  spriteforge_vram_guard.py  spriteforge_web.py  (+2 more)
tests/: conftest.py  test_action_command_service.py  test_advanced_features.py  test_api_auth.py  test_consistency_lock.py  test_editor_history.py  test_failure_explainer.py  test_generation_intelligence.py  test_generation_progress_eta.py  test_logging_service.py  test_marketplace.py  test_onboarding.py  test_oom_recovery.py  test_pack_formats.py  test_qa_thresholds.py  (+15 more)
(+272 files in other folders)
