[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spriteforge"
version = "1.2.0"
description = "SpriteForge Studio: pixel-art spritesheets tool from text/reference"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "imageio>=2.31.0",
    "huggingface_hub>=0.23.0",
    "imageio-ffmpeg>=0.4.9",
    "websocket-client>=1.8.0",
    "flask>=3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
spriteforge = "spriteforge_cli:main"

[tool.setuptools]
package-dir = {"" = "app"}
py-modules = [
    "spriteforge",
    "spriteforge_cli",
    "spriteforge_web",
    "spriteforge_unified",
    "spriteforge_engine_export",
    "spriteforge_compare",
    "spriteforge_utils",
    "spriteforge_prompts",
    "spriteforge_maintenance"
]
